@@ -4,6 +4,7 @@
   * Changed order of initialization so initialize_page is called after goto
   * Added flash method to Element to temporarily change the background color
   * Added when_not_present method to Element
+  * Added default override of page level waits - Druid.default_page_wait
 === 2016-12-26
 * Enhancement
   * Changed page_url to accept a symbol that will cause it to call a corresponding method
